--- a/output/team.html
+++ b/output/team.html
@@ -23,7 +23,46 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                {{ team }}
+                <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">emily</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ew3</li>
+            <li class="list-group-item">Email: <a href="mailto:ewirtz3@gmail.com">ewirtz3@gmail.com</a></li>
+            <li class="list-group-item">Office number: 3</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">sean</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:swirtz@gmail.com">swirtz@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/swirtz" target="_blank" rel="noopener noreferrer">swirtz</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">molly</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: m34</li>
+            <li class="list-group-item">Email: <a href="mailto:molly@gmail.com">molly@gmail.com</a></li>
+            <li class="list-group-item">School: rockhurst</li>
+        </ul>
+    </div>
+</div>
+
             </div>
         </div>
     </div>
