--- a/output/team.html
+++ b/output/team.html
@@ -30,8 +30,8 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ew3</li>
-            <li class="list-group-item">Email: <a href="mailto:ewirtz3@gmail.com">ewirtz3@gmail.com</a></li>
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:ewirtz@gmail.com">ewirtz@gmail.com</a></li>
             <li class="list-group-item">Office number: 3</li>
         </ul>
     </div>
@@ -43,22 +43,48 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:swirtz@gmail.com">swirtz@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/swirtz" target="_blank" rel="noopener noreferrer">swirtz</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:sean@gmail.com">sean@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/sean123" target="_blank" rel="noopener noreferrer">sean123</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">laura</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:laura@gmail.com">laura@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/laura890" target="_blank" rel="noopener noreferrer">laura890</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">molly</h2>
+        <h2 class="card-title">jim</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: m34</li>
-            <li class="list-group-item">Email: <a href="mailto:molly@gmail.com">molly@gmail.com</a></li>
-            <li class="list-group-item">School: rockhurst</li>
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:jim@gmail.com">jim@gmail.com</a></li>
+            <li class="list-group-item">School: creighton</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">rachel</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 8</li>
+            <li class="list-group-item">Email: <a href="mailto:rachel@gmail.com">rachel@gmail.com</a></li>
+            <li class="list-group-item">School: mizzou</li>
         </ul>
     </div>
 </div>
